@@ -7,6 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Fixed
+
+- Fixed check_sshpermitrootno to check real configuration
+
 ## [22.06] - 2022-06-16
 
 ### Changed
